Add navigation for mobile app and a skeleton for search bar

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Kevin Quincke <kevinqf14@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
