--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,7 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react-native": "0.68.0"
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.1",
+    "react-native": "0.68.0",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
