--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "axios": "^0.26.1",
+    "query-string": "^7.1.1",
     "react-native": "0.68.0",
+    "react-native-config": "^1.4.5",
     "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
